Fixing carousels on mobile/tablets

--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -74,8 +74,17 @@
 
 @media only screen and (min-width: 900px) and (max-width: 1299px) {
 
+    .slideLine img {
+        width: 95%;
+        height: 95%;
+    }
+
     .lastSlide, .nextSlide {
-        display: none;
+        margin: auto 0;
+        background-color: rgb(63, 156, 161);
+        color: white;
+        font-size: 2rem;
+        padding: 9.75rem 2rem;
     }
     
 }
@@ -88,6 +97,11 @@
 
 @media only screen and (max-width: 899px) {
 
+    .carouselContainer {
+        width: 90%;
+        margin: 0 auto 5rem auto;
+    }
+
     .carouselTitle {
         font-size: 2.5rem;
     }
@@ -98,7 +112,8 @@
     }
 
     .lastSlide, .nextSlide {
-        display: none;
+        margin: auto 0;
+        padding: 3.5rem 1rem;
     }
 
 }
